examples/invalid/53_double_literal_underflow.lane
module Examples.Invalid.DoubleLiteralUnderflow

pub let bad : Double = 1e-4000
